# nanoC

./: .gitignore  CMakeLists.txt  README.md  main.cpp
cfg/: cfg_gen.cpp  cfg_gen.h  instruction_gen.cpp  instruction_gen.h
grammar/: abstract_grammar.txt  syntax_grammar.txt
ir/: cfg_gen.cpp  cfg_gen.h  instruction_gen.cpp  instruction_gen.h  ir.h  ir_printer.h  reg_alloc.cpp  reg_alloc.h
lexer/: lexer.cpp  lexer.h  lexing_exception.h  token.cpp  token.h
memory/: memory_allocation.cpp  memory_allocation.h
parser/: ast.cc  ast.h  decl.cpp  expr.cpp  parser.cpp  parser.h  parsing_exception.h  stmt.cpp
semantic/: name_analysis.cpp  name_analysis.h  semantic_exception.h  symbol.h  type_analysis.cpp  type_analysis.h
std/: print.c
test/: ir.txt  run.sh  run_assembly.sh  test.c  tester.sh
test/ast/: Expr.c  FullProgram.c  FuncDecl.c  IfElse.c  MainFunction.c  While.c  expr.c  full_program.c  func_decl.c  if_else.c  main_function.c  struct_decl.c  var_decl.c  while.c
test/code_gen/: assignment.c  binary_operations.c  func_call.c  func_call1.c  func_call2.c  function_args.c  function_args2.c  if_else.c  loop_break.c  loop_continue.c  member_access.c  pointer.c  print_c.c  print_i.c  recursive_calls.c  type_cast.c  unary.c  while.c
test/lexer/: full_program.c
test/lexing_error/: invalid_include.c  unclosed_char_literal.c  unclosed_string_literal.c
test/name_analysis/: conflicting_proto_func_type2.c  duplicate_func_arg1.c  (+3 more)
x86/: addr_gen.cpp  addr_gen.h  asm_context.h  code_gen.cpp  code_gen.h  code_gen_deprecate.cpp  code_gen_deprecate.h
(+32 files in other folders)
